saving data as .csv

--- a/data/data_generator.ipynb
+++ b/data/data_generator.ipynb
@@ -441,7 +441,7 @@
       },
       "outputs": [],
       "source": [
-        "df_product_views.to_csv('product_views', index=False)"
+        "df_product_views.to_csv('product_views.csv', index=False)"
       ]
     },
     {
@@ -717,7 +717,7 @@
       },
       "outputs": [],
       "source": [
-        "df_ads_views.to_csv('ads_views', index=False)"
+        "df_ads_views.to_csv('ads_views.csv', index=False)"
       ]
     },
     {
