--- a/data/data_generator.ipynb
+++ b/data/data_generator.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 18,
       "id": "783fc00e",
       "metadata": {
         "id": "783fc00e"
@@ -26,7 +26,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 19,
       "id": "1e321326",
       "metadata": {
         "id": "1e321326"
@@ -41,7 +41,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 20,
       "id": "8d4020ed",
       "metadata": {
         "colab": {
@@ -76,7 +76,7 @@
               " 'OY5LNPB5A8FF43ITRZG3']"
             ]
           },
-          "execution_count": 3,
+          "execution_count": 20,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -87,14 +87,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 21,
       "id": "fa8aa17f",
       "metadata": {
         "id": "fa8aa17f"
       },
       "outputs": [],
       "source": [
-        "pd.DataFrame(active_advertisers, columns=['advertiser_id']).to_csv('advertiser_ids', index=False)"
+        "pd.DataFrame(active_advertisers, columns=['advertiser_id']).to_csv('advertiser_ids.csv', index=False)"
       ]
     },
     {
@@ -109,7 +109,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 22,
       "id": "f14e127e",
       "metadata": {
         "id": "f14e127e"
@@ -123,7 +123,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 23,
       "id": "29536b71",
       "metadata": {
         "id": "29536b71"
@@ -135,7 +135,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 24,
       "id": "dxChIAYTGAuW",
       "metadata": {
         "colab": {
@@ -180,7 +180,7 @@
               " '2024-12-19']"
             ]
           },
-          "execution_count": 7,
+          "execution_count": 24,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -201,7 +201,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 25,
       "id": "9d9881d6",
       "metadata": {
         "id": "9d9881d6"
@@ -213,7 +213,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 26,
       "id": "a9ad9fb2",
       "metadata": {
         "id": "a9ad9fb2"
@@ -225,7 +225,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 27,
       "id": "6e325c08",
       "metadata": {
         "id": "6e325c08"
@@ -237,7 +237,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 28,
       "id": "6b529e6b",
       "metadata": {
         "colab": {
@@ -423,7 +423,7 @@
               "19  IDOFCO721HTJGDH7332G     dhertt  2024-11-20"
             ]
           },
-          "execution_count": 11,
+          "execution_count": 28,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -434,7 +434,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 29,
       "id": "82920f82",
       "metadata": {
         "id": "82920f82"
@@ -456,7 +456,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 30,
       "id": "000c1cec",
       "metadata": {
         "id": "000c1cec"
@@ -468,7 +468,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 31,
       "id": "4808515d",
       "metadata": {
         "id": "4808515d"
@@ -480,7 +480,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 32,
       "id": "1243bec6",
       "metadata": {
         "id": "1243bec6"
@@ -492,7 +492,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 33,
       "id": "317bde80",
       "metadata": {
         "colab": {
@@ -699,7 +699,7 @@
               "19  SOVPFK3BBWKTQM9HOHWJ     f99ax7  impression  2024-11-20"
             ]
           },
-          "execution_count": 16,
+          "execution_count": 33,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -710,7 +710,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 34,
       "id": "f7a9a5af",
       "metadata": {
         "id": "f7a9a5af"
